--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Olio HT</string>
+    <string name="app_name">ht_frags</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    // toolbar
+    <string name="open_drawer_text">open drawer</string>
+    <string name="close_drawer_text">close drawer</string>
+
 </resources>
